@startuml
skinparam classAttributeIconSize 0
hide empty members
hide circle

' Definition of classes
class FAP {
    - static user : User
    - static moduleList : ModuleList
    - static jsonManager : JsonManager
    - static filePath : String
    - static LOGGER : Logger
    - static final BYE : String
    + static void main(String[] args)
    - static void runApplication()
}

class User {
}

class ModuleList {
}

class JsonManager {
}

class Ui {
    + printGreeting(name: String)
    + printCommandGuide()
    + getUserCommand(): String
    + close()
}

class Parser {
    + static getCommand(userInput: String): Command
}

class Command {
    + execute(userInput: String)
}

' Relationships
FAP --> User : uses
FAP --> ModuleList : uses
FAP --> JsonManager : uses
FAP --> "data\CS2113_AY2324S2_FAP_Storage.txt" : uses
FAP --> Logger : uses <color:DarkSlateGray>logs</color>
FAP --> Ui : uses
FAP --> Parser : uses
FAP ..> Command : uses
Ui ..> User : uses
Parser --> Command : returns
Logger ..> FAP : logs

@enduml
